kubernetes/infrastructure/argocd/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    avp.kubernetes.io/path: "secret/data/kubernetes/config"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local.<domain>`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
